--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "next": "15.3.3",
     "papaparse": "^5.4.1",
     "patch-package": "^8.0.0",
-    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "4.2.67",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
