--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "cp node_modules/pdfjs-dist/build/pdf.worker.mjs public/pdf.worker.min.js || true"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@genkit-ai/googleai": "^1.14.1",
