--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@types/node": "^20",
     "@types/papaparse": "^5.3.14",
     "@types/pdf-parse": "^1.1.4",
